@@ -18,6 +18,7 @@ v0.5.0 - 2022-01-26
 - Fixed #116 - Python 3.0 deprecation compatibility
 - Fixed #122 - pywin32 import order
 - Resolved #72 via documentation update
+- Minor changes to improve client and proxy disconnects
 
 v0.4.0 - 2018-09-04
 - Implemented #18 - support for multiple NTLM proxies that will be iterated
